--- a/tasks.json
+++ b/tasks.json
@@ -8,10 +8,10 @@
   },
   {
     "id": "2",
-    "description": "buy groceries",
+    "description": "Buy groceries and cook dinner",
     "status": "todo",
     "createdAt": "2026-01-03T01:51:53.426Z",
-    "updatedAt": "2026-01-03T01:51:53.430Z"
+    "updatedAt": "2026-01-03T02:42:16.164Z"
   },
   {
     "id": "3",
