--- a/tasks.json
+++ b/tasks.json
@@ -9,16 +9,14 @@
   {
     "id": "2",
     "description": "Buy groceries and cook dinner",
-    "status": "todo",
-    "createdAt": "2026-01-03T01:51:53.426Z",
-    "updatedAt": "2026-01-03T02:42:16.164Z"
+    "status": "in-progress",
+    "createdAt": "2026-01-03T01:51:53.426Z"
   },
   {
     "id": "4",
     "description": "pray",
-    "status": "todo",
-    "createdAt": "2026-01-03T02:04:18.266Z",
-    "updatedAt": "2026-01-03T02:04:18.272Z"
+    "status": "done",
+    "createdAt": "2026-01-03T02:04:18.266Z"
   },
   {
     "id": "5",
