--- a/tasks.json
+++ b/tasks.json
@@ -9,8 +9,9 @@
   {
     "id": "2",
     "description": "Buy groceries and cook dinner",
-    "status": "in-progress",
-    "createdAt": "2026-01-03T01:51:53.426Z"
+    "status": "done",
+    "createdAt": "2026-01-03T01:51:53.426Z",
+    "updatedAt": "2026-01-03T12:25:03.157Z"
   },
   {
     "id": "4",
