--- a/tasks.json
+++ b/tasks.json
@@ -1,10 +1,10 @@
 [
   {
     "id": "1",
-    "description": "go to market",
+    "description": "Finish comprehensive documentation",
     "status": "todo",
     "createdAt": "2026-01-03T01:51:23.374Z",
-    "updatedAt": "2026-01-03T01:51:23.379Z"
+    "updatedAt": "2026-01-03T13:21:09.129Z"
   },
   {
     "id": "2",
@@ -26,5 +26,12 @@
     "status": "in-progress",
     "createdAt": "2026-01-03T02:04:29.960Z",
     "updatedAt": "2026-01-03T12:23:48.169Z"
+  },
+  {
+    "id": "6",
+    "description": "Finish backend documentation",
+    "status": "todo",
+    "createdAt": "2026-01-03T13:20:52.069Z",
+    "updatedAt": "2026-01-03T13:20:52.074Z"
   }
 ]
