--- a/tasks.json
+++ b/tasks.json
@@ -1,37 +1,16 @@
 [
   {
     "id": "1",
-    "description": "Finish comprehensive documentation",
-    "status": "todo",
-    "createdAt": "2026-01-03T01:51:23.374Z",
-    "updatedAt": "2026-01-03T13:21:09.129Z"
+    "description": "Implement user authentication",
+    "status": "done",
+    "createdAt": "2026-01-03T14:44:19.324Z",
+    "updatedAt": "2026-01-03T14:47:03.203Z"
   },
   {
     "id": "2",
-    "description": "Buy groceries and cook dinner",
-    "status": "done",
-    "createdAt": "2026-01-03T01:51:53.426Z",
-    "updatedAt": "2026-01-03T12:25:03.157Z"
-  },
-  {
-    "id": "4",
-    "description": "pray",
-    "status": "in-progress",
-    "createdAt": "2026-01-03T02:04:18.266Z",
-    "updatedAt": "2026-01-03T12:23:57.799Z"
-  },
-  {
-    "id": "5",
-    "description": "study the bible",
-    "status": "in-progress",
-    "createdAt": "2026-01-03T02:04:29.960Z",
-    "updatedAt": "2026-01-03T12:23:48.169Z"
-  },
-  {
-    "id": "6",
-    "description": "Finish backend documentation",
+    "description": "Write comprehensive unit tests",
     "status": "todo",
-    "createdAt": "2026-01-03T13:20:52.069Z",
-    "updatedAt": "2026-01-03T13:20:52.074Z"
+    "createdAt": "2026-01-03T14:44:44.451Z",
+    "updatedAt": "2026-01-03T14:48:05.750Z"
   }
 ]
